2010-12-16  Gautier Portet <gautier soundconverter org>
	* src/soundconverter.py: Fix unhandled exception when displaying 
	 notifications.
	 (thanks Michael, fixes #17797)

2010-11-30  Gautier Portet <gautier soundconverter org>
	* src/soundconverter.py: Apply patch: CLI mode crash when converting to FLAC.
	 (thanks Michael)

2010-11-26  Gautier Portet <gautier soundconverter org>
	* src/soundconverter.py: Apply patch with many batch mode fixes:
	  - cli options -t, -m, -s fail or crash
	  - crash
	  - stop killing output files in batch mode
	 (thanks Michael, fixes #17743, #17735, #17502)

2010-11-22  Gautier Portet <gautier soundconverter org>
	* src/soundconverter.py: Fix destination folder quoting.
	 (thanks Michael & Elitenoobboy, fixes #17426)

2010-11-20  Gautier Portet <gautier soundconverter org>
	* src/soundconverter.py: Make sure all child dialog have a transient.
	 (thanks Cosimo)
	 
2010-11-03  Gautier Portet <gautier soundconverter org>
	* src/soundconverter.py: Add Folder was broken when using Ogg Vorbis filter
	 and trying to add .ogg files, since the extension filter contained two 
	 extension patterns and add_uris supported only one.
	 (thanks philchand, fixes #17675)

2010-06-24  Gautier Portet <kassoulet gmail com>
	* src/soundconverter.py: Destination filename was url encoded when stored
	  in gconf.
	  (thanks Simón, fixes #17291)

2010-06-24  Gautier Portet <kassoulet gmail com>
	* src/soundconverter.py: Fix track number/count missing when writing to
	  AAC files.
	  (thanks Montel and Tim-Philipp, fixes #17291)

2010-06-16  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Fix progress bar oddities, crash in TaskQueue and
	  duplicate mp3 entry in desktop file.
	  (Thanks Michael, closes #17269, #17268 and #17266)

	  release 1.5.3 (1.5.2 was broken)

2010-06-13  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Fix typo preventing SoundConverter to run.
	  (thanks logicaldash & mpmic, fixes #17244)
